--- a/index.html
+++ b/index.html
@@ -65,5 +65,140 @@
 			</div>
 		</div>
 	</header>
+	
+	<!-- Я не верстал гриды не умею -->
+
+	<section class="grid" id="grid">
+		<div class="container">
+			<div>
+				<h2><span>Features</span>Best Features Ever Seen</h2>
+			</div>
+			<div>
+				<div></div>
+				<h3>Well Documented</h3>
+				<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+				<a href="#">Read More</a>
+			</div>
+			<div>
+				<div></div>
+				<h3>Highly Customizeable</h3>
+				<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+				<a href="#">Read More</a>
+			</div>
+			<div>
+				<div></div>
+				<h3>Mobile Friednly Design</h3>
+				<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+				<a href="#">Read More</a>
+			</div>
+			<div>
+				<div></div>
+				<h3>Easy To Edit</h3>
+				<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+				<a href="#">Read More</a>
+			</div>
+			<div>
+				<div></div>
+				<h3>Responsive Design</h3>
+				<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+				<a href="#">Read More</a>
+			</div>
+			<div>
+				<div></div>
+				<h3>24/7 Online Support</h3>
+				<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+				<a href="#">Read More</a>
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+				<p><span>Rosalina Pong</span> - Founder, uithemes</p>
+			</div>
+		</div>
+	</section>
+	<section class="robo" id="robo">
+		<div class="container">
+			<div class="sub">
+				<div class="sub__box">
+					<h2 class="sub__title"><span class="sub__item">Subscribe</span>Signup For A Trail</h2>
+					<p class="sub__text">Create your free account now & get 30 days free trail No credit card required</p>
+					<input class="sub__input" type="email" placeholder="Enter your email address">
+					<button class="sub__btn" type="submit">Subscribe</button>
+				</div>
+				<img class="sub__img" src="img/robot.png" alt="robot">
+			</div>
+		</div>
+	</section>
+	<section class="amazing" id="amazing">
+		<div class="container">
+			<div>
+				<div></div>
+				<h2>Grab Your  Software With Amazing  Features</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+				<dl>
+					<dt>01. Clean Design</dt>
+					<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
+					<dt>02. Easy To Customize</dt>
+					<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
+				</dl>
+			</div>
+		</div>
+	</section>
+	<section class="about" id="about">
+		<div class="container">
+			<div>
+				<h2><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
+				<ul>
+					<li><span>53K</span>Layouts</li>
+					<li><span>10K</span>Projects</li>
+					<li><span>12K</span>Cup Coffee</li>
+					<li><span>120</span>Awards</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section class="video" id="video">
+		<div class="container">
+			<div>
+				<div>
+					<h2>Meet With Future Landingpage</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+					<p>Available Now</p>
+					<ul>
+						<li><a href="https://play.google.com" target="_blank"><img src="img/google play.png" alt="Google btn"></a></li>
+						<li><a href="https://www.apple.com/" target="_blank"><img src="img/app store.png" alt="app btn"></a></li>
+					</ul>
+				</div>
+				<div>
+					<img src="img/vid.png" alt="video">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="page" id="page">
+		<div class="container">
+			<div>
+				<div><img src="img/brandon.png" alt="Brandon"></div>
+				<div>
+					<div></div>
+					<h2>Limpon Is Suitable For Anytype LandingPage</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+					<a href="#">Get started now</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="easy" id="easy">
+		<div class="container">
+			<div>
+				<div>
+					<div></div>
+					<h2>Easy To Etid & Very Easily Control</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+					<a href="#">Learn more</a>
+				</div>
+				<div><img src="img/samirasa.png" alt="Samirasa"></div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
