--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<!-- Favicon -->
-	<link rel="icon" href="img/logo.png" type="image/x-icon">
-	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 	<title>Limpon</title>
+	<!-- Фавиконы и иконки сайта --> 
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-touch-icon-57x57.png" data-mce-href="/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon-60x60.png" data-mce-href="/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png" data-mce-href="/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon-76x76.png" data-mce-href="/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png" data-mce-href="/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-touch-icon-120x120.png" data-mce-href="/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-touch-icon-144x144.png" data-mce-href="/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon-152x152.png" data-mce-href="/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png" data-mce-href="/apple-touch-icon-180x180.png">
+	<link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32" data-mce-href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" href="img/favicon/android-chrome-192x192.png" sizes="192x192" data-mce-href="/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" href="img/favicon/favicon-96x96.png" sizes="96x96" data-mce-href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16" data-mce-href="/favicon-16x16.png">
+	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Poppins:600,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -200,5 +212,130 @@
 			</div>
 		</div>
 	</section>
+	<section class="page" id="page">
+		<div class="container">
+			<h2><span>testimonials</span>Our Happy Clients</h2>
+			<div>
+				<div>
+					<p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+					<div>
+						<img src="#" alt="avatar">
+						<div>
+							<p>Rolin B. Mirano</p>
+							<p>ceo, uihub</p>
+						</div>
+					</div>
+				</div>
+				<div>
+					<p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+					<div>
+						<img src="#" alt="avatar">
+						<div>
+							<p>Rolin B. Mirano</p>
+							<p>ceo, uihub</p>
+						</div>
+					</div>
+				</div>
+				<div>
+					<p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+					<div>
+						<img src="#" alt="avatar">
+						<div>
+							<p>Rolin B. Mirano</p>
+							<p>ceo, uihub</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="plan" id="plan">
+		<div class="container">
+			<h2><span>our plans</span>Pricing Plans</h2>
+			<div>
+				<div>
+					<h3>Free</h3>
+					<p><strong>starter</strong></p>
+					<ul>
+						<li>Unlimited users Active</li>
+						<li>1 GB Bandwidth Speed</li>
+						<li>256 MB Memory Card</li>
+						<li>Free Domain Name</li>
+						<li>Free Hosting Name</li>
+						<li>24x7 Online Support</li>
+					</ul>
+					<a href="#">choose plan</a>
+				</div>
+				<div>
+					<h3><span>$</span>90<span>/mo</span></h3>
+					<p><strong>starter</strong></p>
+					<ul>
+						<li>Unlimited users Active</li>
+						<li>1 GB Bandwidth Speed</li>
+						<li>256 MB Memory Card</li>
+						<li>Free Domain Name</li>
+						<li>Free Hosting Name</li>
+						<li>24x7 Online Support</li>
+					</ul>
+					<a href="#">choose plan</a>
+				</div>
+				<div>
+					<h3><span>$</span>350<span>/mo</span></h3>
+					<p><strong>starter</strong></p>
+					<ul>
+						<li>Unlimited users Active</li>
+						<li>1 GB Bandwidth Speed</li>
+						<li>256 MB Memory Card</li>
+						<li>Free Domain Name</li>
+						<li>Free Hosting Name</li>
+						<li>24x7 Online Support</li>
+					</ul>
+					<a href="#">choose plan</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="team" id="team">
+		<div class="container">
+			<h2><span>angels</span>Our Team</h2>
+			<div class="box-team">
+				<p>founder</p>
+				<p>Ricardo T. Obrien</p>
+			</div>
+			<div class="box-team">
+				<p>ceo</p>
+				<p>Alberto Del Rio</p>
+			</div>
+			<div class="box-team">
+				<p>designer</p>
+				<p>Thomas Alva Adison</p>
+			</div>
+		</div>
+	</section>
+	<section class="page-form" id="page-form">
+		<div class="container">
+			<h2>Start Your Free Trail No Need Credit Card.</h2>
+			<form action="#">
+				<input type="text" placeholder="Enter your name here">
+				<input type="email" placeholder="Enter your email here">
+				<textarea name="textMessege" placeholder="Enter your message here"></textarea>
+				<button type="submit"><span></span>Submit now</button>
+			</form>
+		</div>
+	</section>
+	<footer class="footer" id="footer">
+		<div class="container">
+			<div>
+				<p>Made With Love & Copyright By - <a href="">limpon</a></p>
+				<ul>
+					<li><a href="#" target="_blank"></a></li>
+					<li><a href="#" target="_blank"></a></li>
+					<li><a href="#" target="_blank"></a></li>
+					<li><a href="#" target="_blank"></a></li>
+					<li><a href="#" target="_blank"></a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
